--- a/VIET Events/localisation/VIET_modifiers_2.csv
+++ b/VIET Events/localisation/VIET_modifiers_2.csv
@@ -196,11 +196,11 @@ VIET_mining_deal;Deal with Mine;Accord avec une mine;;;;;;;;;;;;x
 VIET_mining_deal_desc;This character has negotiated a lucrative deal with a local mine owner.;Ce personnage a négocié un accord lucratif avec un propriétaire de mine local.;;;;;;;;;;;;x
 VIET_mining_deal_big;Deal with Two Mines;Accord avec deux mines;;;;;;;;;;;;x
 VIET_mining_deal_big_desc;This character has negotiated a lucrative deal with two local mine owners.;Ce personnage a négocié un accord lucratif avec deux propriétaires de mines locaux.;;;;;;;;;;;;x
-VIET_lydia_modifier;Sarcastic Maid;Femme de chambre sarcastique;;;;;;;;;;;;x
+VIET_lydia_modifier;Sarcastic Maid;Servante sarcastique;;;;;;;;;;;;x
 VIET_lydia_modifier_desc;This lady was earlier in her life a mere maidservant, but her diligence, loyalty, and most of all, her infamous sarcasm, allowed her to be noticed by her superiors.;Cette dame était plus tôt dans sa vie une simple servante, mais sa diligence, sa loyauté et surtout son infâme sarcasme lui ont permis de se faire remarquer de ses supérieurs.;;;;;;;;;;;;x
 VIET_opinion_sarcastic_lydia;Sarcastic Yet Loyal;Sarcastique pourtant loyal;;;;;;;;;;;;x
 VIET_jon_battle_born_soldier;Was a Poetic Guardsman;Était un garde poétique;;;;;;;;;;;;x
-VIET_jon_battle_born_soldier_desc;This character was originally a guardsman renowned for his friendly, righteous outlook on life and his skill as a poet before he was promoted.;Ce personnage était à l'origine un gardien réputé pour son regard droit et amical sur la vie et son habileté en tant que poète avant sa promotion.;;;;;;;;;;;;x
+VIET_jon_battle_born_soldier_desc;This character was originally a guardsman renowned for his friendly, righteous outlook on life and his skill as a poet before he was promoted.;Ce personnage était à l'origine un garde réputé pour son regard droit et amical sur la vie et son habileté en tant que poète avant sa promotion.;;;;;;;;;;;;x
 VIET_trader_joes_21_seasoning_salute;Twenty One Seasoning Mix;Vingt et un assaisonnements;;;;;;;;;;;;x
 VIET_trader_joes_21_seasoning_salute_desc;This character possesses a stock of a particular blend of twenty-one different spices and herbs, ground and mixed to perfection. It is quite delicious and versatile, and can be used in a lot of different dishes.;Ce personnage possède un stock d'un mélange particulier de vingt et une épices et herbes différentes, moulues et mélangées à la perfection. C'est assez délicieux et polyvalent, et peut être utilisé dans beaucoup de plats différents.;;;;;;;;;;;;x
 VIET_opinion_calmly_corrected_error;Calmly Corrected Me;M'a calmement corrigé;;;;;;;;;;;;x
